// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-8 {
  box-shadow: 0px 3px 12px 0px rgba(0, 0, 0, 0.15),0px 0px 6px 3px rgba(0, 0, 0, 0.02);
}

.emotion-8.emotion-8 {
  position: fixed;
  background-color: var(--bb-palette-background, #000000);
  left: 0;
  height: 100vh;
}

.emotion-9 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px, -50%, 0px);
  -moz-transform: translate3d(0px, -50%, 0px);
  -ms-transform: translate3d(0px, -50%, 0px);
  transform: translate3d(0px, -50%, 0px);
}

@media screen and (max-width: 320px) {
  .emotion-9 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-9:focus {
  outline: none;
}

.emotion-9::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-9 {
  scrollbar-width: none;
  -ms-overflow-style: none;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalDisclosure bb-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    <div
      class="emotion-5 emotion-1 emotion-2 bb-Box bb-ModalBackdrop"
      data-dialog-ref="test"
    >
      <div />
    </div>
    <div
      class="emotion-8 emotion-9 emotion-1 emotion-2 test bb-Box bb-Modal bb-Drawer"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      This is a side overlay
    </div>
  </div>
</div>
`;

exports[`overrides Drawer.Disclosure.styles.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-9 {
  box-shadow: 0px 3px 12px 0px rgba(0, 0, 0, 0.15),0px 0px 6px 3px rgba(0, 0, 0, 0.02);
}

.emotion-9.emotion-9 {
  position: fixed;
  background-color: var(--bb-palette-background, #000000);
  left: 0;
  height: 100vh;
}

.emotion-10 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px, -50%, 0px);
  -moz-transform: translate3d(0px, -50%, 0px);
  -ms-transform: translate3d(0px, -50%, 0px);
  transform: translate3d(0px, -50%, 0px);
}

@media screen and (max-width: 320px) {
  .emotion-10 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-10:focus {
  outline: none;
}

.emotion-10::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-10 {
  scrollbar-width: none;
  -ms-overflow-style: none;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-ModalDisclosure bb-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-2 emotion-3 bb-Box"
  >
    <div
      class="emotion-6 emotion-2 emotion-3 bb-Box bb-ModalBackdrop"
      data-dialog-ref="test"
    >
      <div />
    </div>
    <div
      class="emotion-9 emotion-10 emotion-2 emotion-3 bb-Box bb-Modal bb-Drawer"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      This is a side overlay
    </div>
  </div>
</div>
`;

exports[`overrides Drawer.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-8 {
  box-shadow: 0px 3px 12px 0px rgba(0, 0, 0, 0.15),0px 0px 6px 3px rgba(0, 0, 0, 0.02);
}

.emotion-8.emotion-8 {
  position: fixed;
  background-color: var(--bb-palette-background, #000000);
  left: 0;
  height: 100vh;
}

.emotion-8 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-9 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px, -50%, 0px);
  -moz-transform: translate3d(0px, -50%, 0px);
  -ms-transform: translate3d(0px, -50%, 0px);
  transform: translate3d(0px, -50%, 0px);
}

@media screen and (max-width: 320px) {
  .emotion-9 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-9:focus {
  outline: none;
}

.emotion-9::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-9 {
  scrollbar-width: none;
  -ms-overflow-style: none;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalDisclosure bb-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    <div
      class="emotion-5 emotion-1 emotion-2 bb-Box bb-ModalBackdrop"
      data-dialog-ref="test"
    >
      <div />
    </div>
    <div
      class="emotion-8 emotion-9 emotion-1 emotion-2 bb-Box bb-Modal bb-Drawer"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      This is a side overlay
    </div>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-8 {
  box-shadow: 0px 3px 12px 0px rgba(0, 0, 0, 0.15),0px 0px 6px 3px rgba(0, 0, 0, 0.02);
}

.emotion-8.emotion-8 {
  position: fixed;
  background-color: var(--bb-palette-background, #000000);
  left: 0;
  height: 100vh;
}

.emotion-9 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px, -50%, 0px);
  -moz-transform: translate3d(0px, -50%, 0px);
  -ms-transform: translate3d(0px, -50%, 0px);
  transform: translate3d(0px, -50%, 0px);
}

@media screen and (max-width: 320px) {
  .emotion-9 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-9:focus {
  outline: none;
}

.emotion-9::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-9 {
  scrollbar-width: none;
  -ms-overflow-style: none;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalDisclosure bb-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    <div
      class="emotion-5 emotion-1 emotion-2 bb-Box bb-ModalBackdrop"
      data-dialog-ref="test"
    >
      <div />
    </div>
    <div
      class="emotion-8 emotion-9 emotion-1 emotion-2 bb-Box bb-Modal bb-Drawer"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      This is a side overlay
    </div>
  </div>
</div>
`;

exports[`props should render correctly for an invisible overlay 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-8 {
  box-shadow: 0px 3px 12px 0px rgba(0, 0, 0, 0.15),0px 0px 6px 3px rgba(0, 0, 0, 0.02);
}

.emotion-8.emotion-8 {
  position: fixed;
  background-color: var(--bb-palette-background, #000000);
  left: 0;
  height: 100vh;
}

.emotion-9 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px, -50%, 0px);
  -moz-transform: translate3d(0px, -50%, 0px);
  -ms-transform: translate3d(0px, -50%, 0px);
  transform: translate3d(0px, -50%, 0px);
}

@media screen and (max-width: 320px) {
  .emotion-9 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-9:focus {
  outline: none;
}

.emotion-9::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-9 {
  scrollbar-width: none;
  -ms-overflow-style: none;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalDisclosure bb-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    <div
      class="emotion-5 emotion-1 emotion-2 bb-Box bb-ModalBackdrop"
      data-dialog-ref="test"
      hidden=""
      style="display: none;"
    >
      <div />
    </div>
    <div
      class="emotion-8 emotion-9 emotion-1 emotion-2 bb-Box bb-Modal bb-Drawer"
      data-dialog="true"
      hidden=""
      id="test"
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      This is a side overlay
    </div>
  </div>
</div>
`;

exports[`props should render correctly for full screen 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-8 {
  box-shadow: 0px 3px 12px 0px rgba(0, 0, 0, 0.15),0px 0px 6px 3px rgba(0, 0, 0, 0.02);
}

.emotion-8.emotion-8 {
  position: fixed;
  background-color: var(--bb-palette-background, #000000);
  left: 0;
  height: 100vh;
  width: 100%;
}

.emotion-9 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px, -50%, 0px);
  -moz-transform: translate3d(0px, -50%, 0px);
  -ms-transform: translate3d(0px, -50%, 0px);
  transform: translate3d(0px, -50%, 0px);
}

@media screen and (max-width: 320px) {
  .emotion-9 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-9:focus {
  outline: none;
}

.emotion-9::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-9 {
  scrollbar-width: none;
  -ms-overflow-style: none;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalDisclosure bb-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    <div
      class="emotion-5 emotion-1 emotion-2 bb-Box bb-ModalBackdrop"
      data-dialog-ref="test"
    >
      <div />
    </div>
    <div
      class="emotion-8 emotion-9 emotion-1 emotion-2 bb-Box bb-Modal bb-Drawer"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      This is a side overlay
    </div>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-8 {
  box-shadow: 0px 3px 12px 0px rgba(0, 0, 0, 0.15),0px 0px 6px 3px rgba(0, 0, 0, 0.02);
}

.emotion-8.emotion-8 {
  position: fixed;
  background-color: var(--bb-palette-background, #000000);
  left: 0;
  height: 100vh;
}

.emotion-9 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px, -50%, 0px);
  -moz-transform: translate3d(0px, -50%, 0px);
  -ms-transform: translate3d(0px, -50%, 0px);
  transform: translate3d(0px, -50%, 0px);
}

@media screen and (max-width: 320px) {
  .emotion-9 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-9:focus {
  outline: none;
}

.emotion-9::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-9 {
  scrollbar-width: none;
  -ms-overflow-style: none;
}

.emotion-11 {
  background-color: var(--bb-palette-primary, #000000)!important;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalDisclosure bb-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    <div
      class="emotion-5 emotion-1 emotion-2 bb-Box bb-ModalBackdrop"
      data-dialog-ref="test"
      hidden=""
      style="display: none;"
    >
      <div />
    </div>
    <div
      class="emotion-8 emotion-9 emotion-1 emotion-11 bb-Box bb-Modal bb-Drawer"
      data-dialog="true"
      hidden=""
      id="test"
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      This is a side overlay
    </div>
  </div>
</div>
`;

exports[`props should render correctly without backdrop 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  box-shadow: 0px 3px 12px 0px rgba(0, 0, 0, 0.15),0px 0px 6px 3px rgba(0, 0, 0, 0.02);
}

.emotion-5.emotion-5 {
  position: fixed;
  background-color: var(--bb-palette-background, #000000);
  left: 0;
  height: 100vh;
}

.emotion-6 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px, -50%, 0px);
  -moz-transform: translate3d(0px, -50%, 0px);
  -ms-transform: translate3d(0px, -50%, 0px);
  transform: translate3d(0px, -50%, 0px);
}

@media screen and (max-width: 320px) {
  .emotion-6 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-6:focus {
  outline: none;
}

.emotion-6::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-6 {
  scrollbar-width: none;
  -ms-overflow-style: none;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalDisclosure bb-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    <div
      class="emotion-5 emotion-6 emotion-1 emotion-2 bb-Box bb-Modal bb-Drawer"
      data-dialog="true"
      hidden=""
      id="test"
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      This is a side overlay
    </div>
  </div>
</div>
`;

exports[`theming Drawer.Disclosure.styles.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-9 {
  box-shadow: 0px 3px 12px 0px rgba(0, 0, 0, 0.15),0px 0px 6px 3px rgba(0, 0, 0, 0.02);
}

.emotion-9.emotion-9 {
  position: fixed;
  background-color: var(--bb-palette-background, #000000);
  left: 0;
  height: 100vh;
}

.emotion-10 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px, -50%, 0px);
  -moz-transform: translate3d(0px, -50%, 0px);
  -ms-transform: translate3d(0px, -50%, 0px);
  transform: translate3d(0px, -50%, 0px);
}

@media screen and (max-width: 320px) {
  .emotion-10 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-10:focus {
  outline: none;
}

.emotion-10::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-10 {
  scrollbar-width: none;
  -ms-overflow-style: none;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-ModalDisclosure bb-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-2 emotion-3 bb-Box"
  >
    <div
      class="emotion-6 emotion-2 emotion-3 bb-Box bb-ModalBackdrop"
      data-dialog-ref="test"
    >
      <div />
    </div>
    <div
      class="emotion-9 emotion-10 emotion-2 emotion-3 bb-Box bb-Modal bb-Drawer"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      This is a side overlay
    </div>
  </div>
</div>
`;

exports[`theming Drawer.styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-8 {
  box-shadow: 0px 3px 12px 0px rgba(0, 0, 0, 0.15),0px 0px 6px 3px rgba(0, 0, 0, 0.02);
}

.emotion-8.emotion-8 {
  position: fixed;
  background-color: var(--bb-palette-background, #000000);
  left: 0;
  height: 100vh;
}

.emotion-8 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-9 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px, -50%, 0px);
  -moz-transform: translate3d(0px, -50%, 0px);
  -ms-transform: translate3d(0px, -50%, 0px);
  transform: translate3d(0px, -50%, 0px);
}

@media screen and (max-width: 320px) {
  .emotion-9 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-9:focus {
  outline: none;
}

.emotion-9::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-9 {
  scrollbar-width: none;
  -ms-overflow-style: none;
}

<div>
  <button
    aria-controls="test"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalDisclosure bb-DrawerDisclosure"
    type="button"
  >
    Toggle
  </button>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    <div
      class="emotion-5 emotion-1 emotion-2 bb-Box bb-ModalBackdrop"
      data-dialog-ref="test"
    >
      <div />
    </div>
    <div
      class="emotion-8 emotion-9 emotion-1 emotion-2 bb-Box bb-Modal bb-Drawer"
      data-dialog="true"
      id="test"
      role="dialog"
      tabindex="-1"
    >
      This is a side overlay
    </div>
  </div>
</div>
`;
